# jackett-search

./: .gitignore  .markdownlint.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  flaresolverr-compose.yml  jackett-compose.yml  jackett-search  pyproject.toml
.github/workflows/: lint.yml
