[project]
name = "jackett-search"
version = "0.1.0"
description = "Non-interactive Jackett search CLI with JSON output, colour table, and magnet links"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["jackett", "torrent", "cli", "search", "magnet"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
